# obstacle-run

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml  format.yml
assets/: CMakeLists.txt
assets/fonts/: all.json
assets/images/: ForestBackground.txt  all.json
assets/scenes/: menu.json
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
include/: Game.h
include/components/: BulletBox.h  Button.h  ImageRenderer.h  NetworkController.h  PhysicsBody.h  PlayerController.h  Renderer.h  SolidRenderer.h  TextRenderer.h  Transform.h
include/exceptions/: PointerException.h  SDLException.h
include/factories/: BulletBoxFactory.h  ButtonFactory.h  ImageRendererFactory.h  NetworkControllerFactory.h  PhysicsBodyFactory.h  PlayerControllerFactory.h  RendererFactory.h  SolidRendererFactory.h  TextRendererFactory.h  TransformFactory.h
include/interfaces/: ComponentFactory.h  JsonConvertible.h
include/listeners/: ContactListener.h
include/managers/: ComponentManager.h  FontManager.h  ImageManager.h  Input.h  SceneManager.h
include/networking/: Client.h  Server.h
include/objects/: Component.h  Font.h  GameObject.h  Image.h  PhysicsWorld.h
include/scenes/: Scene.h
include/server/: Server.h
include/utils/: Buffer.h  DebugAssert.h  Endian.h  Time.h  TimePool.h  Vector2.h  Vector2D.h  Vector4.h
scripts/: format.ps1
src/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
src/components/: BulletBox.cpp  Button.cpp  ImageRenderer.cpp  NetworkController.cpp  PhysicsBody.cpp  PlayerController.cpp  Renderer.cpp  Renderer.h  SolidRenderer.cpp  TextRenderer.cpp  Transform.cpp  Transform.h
src/exceptions/: FileSystemException.h  PointerException.h  SDLException.h
src/factories/: BulletBoxFactory.cpp  ButtonFactory.cpp  ImageRendererFactory.cpp  NetworkControllerFactory.cpp  PhysicsBodyFactory.cpp  PlayerControllerFactory.cpp  RendererFactory.cpp  RendererFactory.h  SolidRendererFactory.cpp  TextRendererFactory.cpp  TransformFactory.cpp  TransformFactory.h
src/interfaces/: JsonConvertible.h
src/listeners/: ContactListener.cpp
src/managers/: ComponentManager.cpp  ComponentManager.h  FontManager.cpp  ImageManager.cpp  Input.cpp  Input.h  SceneManager.cpp  SceneManager.h
src/networking/: Client.cpp  Server.cpp
src/objects/: Component.cpp  Component.h  Font.cpp  GameObject.cpp  GameObject.h  Image.cpp  PhysicsWorld.cpp
src/scenes/: Scene.cpp  Scene.h
src/server/: Server.cpp
src/utils/: Constants.h  DebugAssert.h  Time.cpp  TimePool.cpp  TimePool.h  Vector2D.h
